@startuml SafeCore_Complete_Architecture
!theme blueprint
skinparam linetype ortho
skinparam shadowing true
skinparam componentStyle rectangle
skinparam defaultTextAlignment center

title SafeCore - Layered Architecture\n(JavaFX Desktop + Spring Boot + PostgreSQL ORM)

' ==================== LAYER 1: UI LAYER (TOP) ====================
package "🖥️ UI LAYER - JavaFX Controllers" as UI #LightSkyBlue {
    component [LoginController] as LoginCtrl
    component [RegisterController] as RegCtrl
    component [DashboardController] as DashCtrl
    component [AuditController] as AuditCtrl
    component [SafeSendController] as SafeSendCtrl
    component [AddEntryController] as AddCtrl
    component [BackupController] as BackupCtrl

    component [SceneNavigator] as Navigator
    component [SessionContext\n《Singleton》] as Session

    note right of UI
        **Presentation Layer**
        • JavaFX FXML Controllers
        • User interaction handling
        • View navigation
        • Session management
    end note
}

' ==================== LAYER 2: BUSINESS LAYER (CENTER) ====================
package "💼 BUSINESS LAYER - Services & Domain Logic" as Business #LightGreen {
    ' Service Interfaces
    interface "UserService" as IUserService
    interface "SecurityAuditService" as IAuditService
    interface "SafeSendService" as ISafeSendService
    interface "BackupService" as IBackupService
    interface "PasswordService" as IPasswordService
    interface "PasswordResetService" as IResetService

    ' Concrete Services
    component [VaultService] as VaultSvc #PaleGreen
    component [PasswordHintService] as HintSvc #PaleGreen

    ' Service Implementations
    component [UserServiceImpl] as UserImpl
    component [SecurityAuditServiceImpl] as AuditImpl
    component [SafeSendServiceImpl] as SafeSendImpl
    component [BackupServiceImpl] as BackupImpl
    component [PasswordServiceImpl] as PassImpl

    ' Domain Models
    folder "Domain Models" as Domain {
        component [User]
        component [PasswordEntry]
        component [AuditResult]
    }

    ' Business Exceptions
    folder "Exceptions" as BizEx {
        component [SafeCoreException]
        component [WeakPasswordException]
    }

    note right of Business
        **Business Logic Layer**
        • Service interfaces
        • Service implementations
        • Domain models
        • Business rules
        • Validation logic
    end note
}

' ==================== LAYER 3: SECURITY LAYER (BOTTOM) ====================
package "🔐 SECURITY LAYER - Encryption & Hashing" as Security #LightYellow {
    interface "EncryptionStrategy" as IEncryption
    component [AESEncryptionStrategy\n《AES-256-CBC》] as AES
    component [EncryptionFactory] as EncFactory
    component [KeyManager\n《PBKDF2》] as KeyMgr
    component [PasswordHasher\n《BCrypt》] as Hasher
    component [PasswordStrengthEvaluator] as StrengthEval
    component [PasswordGenerator\n《SecureRandom》] as PassGen

    note right of Security
        **Security Layer**
        • AES-256-CBC encryption
        • BCrypt password hashing
        • PBKDF2 key derivation
        • Secure random generation
        • Password strength evaluation
    end note
}

' ==================== RIGHT SIDE: PERSISTENCE LAYER (ORM/DAO) ====================
package "💾 PERSISTENCE LAYER\nORM (Hibernate) + DAO" as Persistence #LightCoral {

    package "JPA Entities (ORM)" as Entities {
        class UserEntity <<@Entity>> {
            - id: UUID
            - email: String
            - passwordHash: String
            - derivationSalt: byte[]
        }

        class PasswordEntryEntity <<@Entity>> {
            - id: UUID
            - serviceName: String
            - username: String
            - encryptedPassword: byte[]
            - createdAt: LocalDateTime
            - expiresAt: LocalDateTime
            --
            + user: UserEntity {ManyToOne}
        }

        class SafeSendEntryEntity <<@Entity>> {
            - id: UUID
            - encryptedContent: byte[]
            - tokenHash: String
            - expiresAt: LocalDateTime
            - oneTime: boolean
            --
            + user: UserEntity {ManyToOne}
        }

        class PasswordResetTokenEntity <<@Entity>> {
            - id: UUID
            - token: String
            - expiresAt: LocalDateTime
            - used: boolean
            --
            + user: UserEntity {ManyToOne}
        }
    }

    package "Spring Data Repositories (DAO)" as Repositories {
        interface UserRepository <<JpaRepository<UserEntity, UUID>>>
        interface PasswordEntryRepository <<JpaRepository<PasswordEntryEntity, UUID>>>
        interface SafeSendRepository <<JpaRepository<SafeSendEntryEntity, UUID>>>
    }

    database "PostgreSQL\n(Neon Cloud)" as DB {
        storage users
        storage password_entries
        storage safe_send_entries
    }

    note bottom of Persistence
        **Persistence Layer (ORM + DAO)**
        • JPA/Hibernate entities
        • Spring Data repositories
        • PostgreSQL database
        • Transaction management
        • CRUD operations
    end note
}

' ==================== DEPENDENCIES: TOP-DOWN & TO RIGHT ====================

' UI Layer -> Business Layer (DOWN)
LoginCtrl -down-> IUserService
RegCtrl -down-> IUserService
RegCtrl -down-> HintSvc
DashCtrl -down-> VaultSvc
DashCtrl -down-> IAuditService
DashCtrl -down-> ISafeSendService
DashCtrl -down-> IBackupService
DashCtrl -down-> HintSvc
DashCtrl --> Session
AuditCtrl -down-> IAuditService
SafeSendCtrl -down-> ISafeSendService

' UI Navigation
Navigator -[hidden]down- Session
LoginCtrl -up-> Navigator
RegCtrl -up-> Navigator
DashCtrl -up-> Navigator
DashCtrl --> Session

' Business Layer: Interfaces to Implementations
IUserService <|.down. UserImpl
IAuditService <|.down. AuditImpl
ISafeSendService <|.down. SafeSendImpl
IBackupService <|.down. BackupImpl
IPasswordService <|.down. PassImpl

' Business Layer -> Security Layer (DOWN)
UserImpl -down-> Hasher
UserImpl -down-> KeyMgr
UserImpl -down-> StrengthEval
VaultSvc -down-> IEncryption
VaultSvc -down-> EncFactory
AuditImpl -down-> StrengthEval
SafeSendImpl -down-> IEncryption
SafeSendImpl -down-> Hasher
HintSvc -down-> StrengthEval
PassGen -down-> StrengthEval
BackupImpl --> VaultSvc

' Security Layer Internal
IEncryption <|.down. AES
EncFactory -down-> AES
AES -down-> KeyMgr

' Business Layer -> Persistence Layer (TO RIGHT)
UserImpl -right-> UserRepository
VaultSvc -right-> PasswordEntryRepository
VaultSvc -right-> UserRepository
SafeSendImpl -right-> SafeSendRepository
SafeSendImpl -right-> UserRepository
PassImpl -right-> PasswordEntryRepository

' Repositories -> Entities (DAO pattern)
UserRepository .right.> UserEntity : <<manages>>
PasswordEntryRepository .right.> PasswordEntryEntity : <<manages>>
SafeSendRepository .right.> SafeSendEntryEntity : <<manages>>

' Repositories -> Database
UserRepository -down-> DB
PasswordEntryRepository -down-> DB
SafeSendRepository -down-> DB
' Entity Relationships
PasswordEntryEntity -up-> UserEntity : ManyToOne
SafeSendEntryEntity -up-> UserEntity : ManyToOne

' ==================== EXTERNAL DEPENDENCIES ====================
cloud "External\nDependencies" as External #WhiteSmoke {
    component [Spring Boot 3.2.2]
    component [Spring Data JPA]
    component [Hibernate ORM]
    component [JavaFX 17]
    component [JBCrypt 0.4]
    component [PostgreSQL Driver]
}

UI -[hidden]right- External
Business .up.> [Spring Boot 3.2.2] : <<managed by>>
Persistence .up.> [Spring Data JPA] : <<powered by>>
Persistence .up.> [Hibernate ORM] : <<ORM>>
UI .up.> [JavaFX 17] : <<renders>>
Hasher .up.> [JBCrypt 0.4] : <<uses>>
DB .up.> [PostgreSQL Driver] : <<connects>>

' ==================== LEGEND ====================
legend bottom
    **Layered Architecture Flow**
    |= Layer |= Position |= Responsibility |
    | 🖥️ UI Layer | TOP | User interaction, View rendering |
    | 💼 Business Layer | CENTER | Business logic, Services |
    | 🔐 Security Layer | BOTTOM | Encryption, Hashing, Keys |
    | 💾 Persistence Layer | RIGHT | ORM Entities, DAO, Database |

    **Dependency Direction:**
    • Vertical: UI → Business → Security
    • Horizontal: Business → Persistence (right)
    • DAO Pattern: Repositories manage Entities
    • ORM: Hibernate maps Entities to DB tables
endlegend

@enduml



